# coolc-from-scratch

./: .gitignore  ASTPrinter.cpp  ASTPrinter.hpp  CMakeLists.txt  README.md  ast.hpp  cgen.cpp  cgen.hpp  common.hpp  constants.hpp  emit.hpp  environment.cpp  environment.hpp  error.hpp  integration_tests.sh  list.h  localsizer.hpp  main.cpp  object.cpp  object.hpp  out.s  parser.cpp  parser.hpp  run_tests.sh  scanner.cpp  scanner.hpp  semant.cpp  semant.hpp  simplest.cl  simplest2.cl  test_symtab2.cpp  testing_current.cl  testing_scope.cpp  token.cpp  token.hpp  tokentable.cpp  tokentable.hpp  type.hpp  utilities.cpp  utilities.hpp
.github/workflows/: cmake-single-platform.yml
examples/: fact.cl  graph.cl  hello_world.cl  list.cl  simplest.cl
examples/fact/: fact.cl
includes/: common.hpp  constants.hpp  environment.hpp  list.hpp  localsizer.hpp  object.hpp  scanner.hpp  token.hpp  utilities.hpp
lib/: trap.custom.handler.s  trap.handler.s
sideTests/: testing_scope.cpp
src/: cgen.cpp  main.cpp  parser.cpp  semant.cpp  token.cpp  tokentable.cpp  utilities.cpp
